--- a/BOJ STUDY/파이썬 알고리즘 인터뷰/파이썬 문법.md
+++ b/BOJ STUDY/파이썬 알고리즘 인터뷰/파이썬 문법.md
@@ -22,4 +22,18 @@
     - yield 구문 사용하면 제너레이터 리턴 가능
     - yield는 제너레이터가 여기까지 실행 중이던 값을 내보냄, 중간값을 리턴한 다음 함수는 종료되지 않고 구문 끝까지 실행
 #### range
-    - list[range(5)]
+    - a = [n for n in range(1000000)]
+    - b = range(1000000)
+    - len(a) = len(b) , sys.getsizeof(a) = 8697464 sysgetsizeof(b) = 48
+#### enumerate
+    - for i,v in enumerate(a):
+        print(i,v)
+    - 인덱스를 위한 변수를 별도로 관리
+#### print
+    - print('A1','B1',sep=',') -> A1,B1 
+    - print('aa', end=' ')
+      print('bb')  --> aa bb
+    - a = ['A','B'] 리스트 출력시 join
+      print(' '.join(a)) --> A B
+    - print(f'{idx + 1}: {fruit}') f-string 은 3.6버전 이상만
+
