--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -8,8 +8,8 @@ C:\Windows\system32> ssh root@192.168.0.69
 # mkdir /root/.ssh
 C:\Windows\system32> ssh-keygen -t rsa
 C:\Windows\system32> cd %UserProfile%\.ssh
-C:\Users\HanGi Lee\.ssh> scp id_rsa.pub root@192.168.0.69:/root/.ssh/authorized_keys
-scp -> 외부로 파일 전송
+C:\Users\Home\.ssh> scp id_rsa.pub root@192.168.0.120:/root/.ssh/authorized_keys
+C:\Users\Home\.ssh> scp -i id_rsa two-rabbit.jpg root@192.168.56.120:/var/www/html/images -> 외부로 파일 전송
 # vi /etc/ssh/sshd_config
 PasswordAuthentication no
 # systemctl restart sshd
@@ -173,7 +173,7 @@ quit
 ```
 
 # 리눅스 네트워크
-## 1 Router (IP 공유기; NAT GateWay)
+## 1.Router (IP 공유기; NAT GateWay)
 네트워크 주소 변환(NAT; Network Address Translation)은 컴퓨터 네트워킹에서 쓰이는 용어로서, IP 패킷의 TCP/UDP 포트 숫자와 소스 및 목적지의 IP 주소 등을 재기록하면서 라우터를 통해 네트워크 트래픽을 주고 받는 기술을 말합니다. NAT를 이용하는 이유는 대개 사설 네트워크에 속한 여러 개의 호스트가 하나의 공인 IP 주소를 사용하여 인터넷에 접속하기 위함입니다. 많은 네트워크 관리자들이 NAT를 편리한 기법이라고 보고 널리 사용하고 있습니다.
 
 ```
