--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -1,6 +1,6 @@
 # 리눅스 서버
-## 1. SSH(Secure Shell; KeyPair 생성 및 활용)
-키 쌍은 특정 인증 프로토콜에 사용되는 공개 키 및 프라이빗 키 파일을 나타냅니다.
+## 1. SSHD(Secure Shell Daemon; KeyPair 생성 및 활용)
+키 쌍은 특정 인증 프로토콜에 사용되는 공개 키(자물쇠-서버) 및 프라이빗 키(열쇠-특정 폴더) 파일을 나타냅니다.
 SSH 공개 키 인증은 비동기 암호화 알고리즘을 사용하여 "프라이빗" 키와 "공개" 키라는 두 가지 키 파일을 생성합니다. 프라이빗 키 파일은 암호와 동일하며, 모든 상황에서 보호되어야 합니다. 다른 사람이 사용자의 프라이빗 키를 획득하면 사용자가 액세스할 수 있는 모든 SSH 서버에 사용자의 이름으로 로그인할 수 있습니다.
 
 ```
