--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -1,6 +1,6 @@
 # 리눅스 서버
 ## 1. SSHD(Secure Shell Daemon; KeyPair 생성 및 활용)
-키 쌍은 특정 인증 프로토콜에 사용되는 공개 키(자물쇠-서버) 및 프라이빗 키(열쇠-특정 폴더) 파일을 나타냅니다.
+키 쌍은 특정 인증 프로토콜에 사용되는 공개 키(자물쇠-서버) 및 프라이빗(Private; * .pem) 키(열쇠-특정 폴더) 파일을 나타냅니다.
 SSH 공개 키 인증은 비동기 암호화 알고리즘을 사용하여 "프라이빗" 키와 "공개" 키라는 두 가지 키 파일을 생성합니다. 프라이빗 키 파일은 암호와 동일하며, 모든 상황에서 보호되어야 합니다. 다른 사람이 사용자의 프라이빗 키를 획득하면 사용자가 액세스할 수 있는 모든 SSH 서버에 사용자의 이름으로 로그인할 수 있습니다.
 
 ```
@@ -16,6 +16,7 @@ PasswordAuthentication no
 ```
 
 ## 2. HTTPD(Hyper Text Transfer Protocol Daemon; 웹서버 구축 및 간단 홈페이지 꾸미기)
+(AWS Linux : apache, nginx, Win : IIS:Internet Information Services )
 HTTP는 HTML 문서와 같은 리소스들을 가져올 수 있도록 해주는 프로토콜입니다. HTTP는 웹에서 이루어지는 모든 데이터 교환의 기초이며, 클라이언트-서버 프로토콜이기도 합니다. 클라이언트-서버 프로토콜이란 (보통 웹브라우저인) 수신자 측에 의해 요청이 초기화되는 프로토콜을 의미합니다. 하나의 완전한 문서는 텍스트, 레이아웃 설명, 이미지, 비디오, 스크립트 등 불러온(fetched) 하위 문서들로 재구성됩니다.
 ```
 C:\Users\HanGi Lee\.ssh> ssh -i id_rsa root@192.168.0.69
@@ -32,6 +33,7 @@ SELINUX=disabled
 # curl 127.0.0.1
 # systemctl status firewalld
 # firewall-cmd --get-active-zone
+# firewall-cmd --permanent --remove-service=http
 # firewall-cmd --permanent --add-service=http
 # firewall-cmd --reload
 # cd /var/www/html
