--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -79,7 +79,7 @@ SELINUX=disabled
 </html>
 ```
 
-## 3. Storage 추가(Mount; Block Storage 다루기)
+## 3. Storage 추가(Mount; Block Storage 다루기) -AWS EBS
 마운트(mount)는 컴퓨터 과학에서 저장 장치에 접근할 수 있는 경로를 디렉터리 구조에 편입시키는 작업입니다. 좁은 의미로는 유닉스 계열의 운영 체제에서의 mount 명령어 또는 그 명령어를 사용하는 것입니다. mount 명령어를 사용하면 저장 장치의 접근 경로를 원하는 위치에 생성할 수 있습니다. 마운트를 이용하면 분산 파일 시스템으로 확장하기가 용이합니다. 사용자는 마운트된 미디어의 파일들에만 접근이 가능합니다.
 
 ```
@@ -94,35 +94,43 @@ SELINUX=disabled
 UUID=aebf131c-6957-451e-8d34-ec978d9581ae  /data  xfs  defaults,nofail  0  2
 ```
 
-## 4. SAMBA(Server Message Block; 윈도우용 파일 공유 시스템)
+## 4. SAMBA(Server Message Block; 윈도우용 파일 공유 시스템) - Amazon FSx 유사
 서버 메시지 블록(Server Message Block, SMB)은 도스나 윈도우에서 파일이나 디렉터리 및 주변 장치들을 공유하는데 사용되는 메시지 형식입니다. NetBIOS는 SMB 형식에 기반을 두고 있으며, 많은 네트워크 제품들도 SMB를 사용합니다. 이러한 SMB 기반의 네트워크에는 랜매니저, 윈도우 포 워크그룹(Windows for Workgroups), 윈도우 NT, 그리고 랜 서버(Lan Server) 등이 있습니다. 서로 다른 운영 체제 사이에 파일을 공유할 수 있도록 하기 위해 SMB를 사용하는 제품들도 많이 있습니다. 그 중 하나가 삼바인데, 유닉스와 윈도우 컴퓨터들간에 디렉터리와 파일을 공유할 수 있게 합니다.
 
 ```
 # yum install -y samba
 # mkdir -p /var/samba/share
 # chmod 777 /var/samba/share
-# adduser johnlee
-# passwd johnlee
-# smbpasswd -a johnlee
+# adduser kosa
+# passwd kosa0401
+# smbpasswd -a kosa
 # vi /etc/samba/smb.conf
-        workgroup = hali
+        workgroup = hali #제어판 - 네트워크 활성 네트워크 이름 적기 (SK_WifiGIGAC62F_5G)
 [share]
         comment = Share Directory
         path = /var/samba/share
         browserable = yes
         writable = yes
-        valid users = johnlee
+        valid users = kosa
         create mask = 0777
         directory mask = 0777
 
 # systemctl start smb
+# systemctl enable smb
+# systemctl enable --now smb
+
 # systemctl start nmb
-\\192.168.0.69
-# firewall-cmd --permanent --add-service-samba --zone=public
+# systemctl enable nmb
+# systemctl enable --now nmb
+
+# firewall-cmd --permanent --add-service=samba --zone=public
 # firewall-cmd --reload
+윈도우 검색 -> \\192.168.56.120
+# yum install -y samba-client
+# smbclient //192.168.56.120/share -U kosa
 ```
 
-## 5. NFS(Network File System; 리눅스용 파일 공유 시스템)
+## 5. NFS(Network File System; 리눅스용 파일 공유 시스템) - AWS EFS
 네트워크 파일 시스템(Network File System, NFS)은 1984년에 썬 마이크로시스템즈가 개발한 프로토콜입니다. 클라이언트 컴퓨터의 사용자가 네트워크 상의 파일을 직접 연결된 스토리지에 접근하는 방식과 비슷한 방식으로 접근하도록 도와 줍니다. 다른 수많은 프로토콜과 마찬가지로 ONC RPC 시스템을 기반으로 합니다. 네트워크 파일 시스템은 RFC에 정의된 오픈 표준이므로 누구나 구현할 수 있습니다.
 
 - 서버
