--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -146,15 +146,19 @@ UUID=aebf131c-6957-451e-8d34-ec978d9581ae  /data  xfs  defaults,nofail  0  2
 # systemctl enable nfs-server
 # systemctl enable --now nfs-server
 # exportfs -v
+# firewall-cmd --permanent --add-service=nfs
+# firewall-cmd --permanent --add-service=rpc-bind
+# firewall-cmd --permanent --add-service=mountd
+# firewall-cmd --reload
 ```
 
 - 클라이언트
 ```
 # rpm -qa | grep nfs-utils
 # yum install -y nfs-utils
-# showmount -e 192.168.0.69
+# showmount -e 192.168.0.120
 # mkdir share
-# mount -t nfs 192.168.0.69:/share /root/share
+# mount -t nfs 192.168.0.120:/share /root/share
 # df -h
 # vi /etc/fstab
 192.168.0.69:/share /root/share nfs defaults 0 0
@@ -176,6 +180,7 @@ gpgcheck=1
 # mariadb --version
 # systemctl start mariadb
 # systemctl enable mariadb
+# systemctl enable --now mariadb
 # mysql_secure_installation
 # systemctl restart mariadb
 # mysql -u root -p
