--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -1,5 +1,5 @@
 # 리눅스 서버
-## 1. SSHD(Secure Shell Daemon; KeyPair 생성 및 활용)
+## 1. SSHD(Secure Shell Daemon; KeyPair 생성 및 활용) - AWS KeyPair
 키 쌍은 특정 인증 프로토콜에 사용되는 공개 키(자물쇠-서버) 및 프라이빗(Private; * .pem) 키(열쇠-특정 폴더) 파일을 나타냅니다.
 SSH 공개 키 인증은 비동기 암호화 알고리즘을 사용하여 "프라이빗" 키와 "공개" 키라는 두 가지 키 파일을 생성합니다. 프라이빗 키 파일은 암호와 동일하며, 모든 상황에서 보호되어야 합니다. 다른 사람이 사용자의 프라이빗 키를 획득하면 사용자가 액세스할 수 있는 모든 SSH 서버에 사용자의 이름으로 로그인할 수 있습니다.
 
@@ -201,7 +201,27 @@ quit
 ## 1.Router (IP 공유기; AWS VPC NAT GateWay)
 네트워크 주소 변환(NAT; Network Address Translation)은 컴퓨터 네트워킹에서 쓰이는 용어로서, IP 패킷의 TCP/UDP 포트 숫자와 소스 및 목적지의 IP 주소 등을 재기록하면서 라우터를 통해 네트워크 트래픽을 주고 받는 기술을 말합니다. NAT를 이용하는 이유는 대개 사설 네트워크에 속한 여러 개의 호스트가 하나의 공인 IP 주소를 사용하여 인터넷에 접속하기 위함입니다. 많은 네트워크 관리자들이 NAT를 편리한 기법이라고 보고 널리 사용하고 있습니다.
 
+공인 IP = Public IP
+사설 IP = Private IP
+
+강의실 네트워크
+Public Subnet
+192.168.0.0 ~ 192.168.0.255
+
 ```
+# hostnamectl set-hostname nat
+```
+
+```
+# vi /etc/sysconfig/network-scripts/ifcfg-enp0s3
+TYPE=Ethernet
+BOOTPROTO=none
+NAME=enp0s3
+DEVICE=enp0s3
+ONBOOT=yes
+IPADDR=192.168.35.226
+NETMASK=255.255.255.0
+
 # vi /etc/sysconfig/network-scripts/ifcfg-enp0s8
 TYPE=Ethernet
 BOOTPROTO=none
