--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -201,18 +201,21 @@ quit
 ## 1.Router (IP 공유기; AWS VPC NAT GateWay)
 네트워크 주소 변환(NAT; Network Address Translation)은 컴퓨터 네트워킹에서 쓰이는 용어로서, IP 패킷의 TCP/UDP 포트 숫자와 소스 및 목적지의 IP 주소 등을 재기록하면서 라우터를 통해 네트워크 트래픽을 주고 받는 기술을 말합니다. NAT를 이용하는 이유는 대개 사설 네트워크에 속한 여러 개의 호스트가 하나의 공인 IP 주소를 사용하여 인터넷에 접속하기 위함입니다. 많은 네트워크 관리자들이 NAT를 편리한 기법이라고 보고 널리 사용하고 있습니다.
 
-공인 IP = Public IP
-사설 IP = Private IP
-
 강의실 네트워크
 Public Subnet
-192.168.0.0 ~ 192.168.0.255
+192.168.0.0/24
+192.168.0.0 ~ 192.168.0.255 (256개 IP - 2개 = 254개)
+192.168.0.0   네트워크 주소(시작 IP)
+192.168.0.255 브로드캐스팅 주소(마지막 IP)
+
+Private Subnet
+172.31.0.0/24
+172.31.0.0 ~ 172.31.0.255 (256개 IP - 2개 = 254개)
+172.31.0.0   네트워크 주소(시작 IP)
+172.31.0.255 브로드캐스팅 주소(마지막 IP)
 
 ```
 # hostnamectl set-hostname nat
-```
-
-```
 # vi /etc/sysconfig/network-scripts/ifcfg-enp0s3
 TYPE=Ethernet
 BOOTPROTO=none
@@ -221,6 +224,9 @@ DEVICE=enp0s3
 ONBOOT=yes
 IPADDR=192.168.35.226
 NETMASK=255.255.255.0
+GATEWAY=192.168.35.1
+DNS1=8.8.8.8
+DNS2=8.8.8.4
 
 # vi /etc/sysconfig/network-scripts/ifcfg-enp0s8
 TYPE=Ethernet
@@ -228,8 +234,9 @@ BOOTPROTO=none
 NAME=enp0s8
 DEVICE=enp0s8
 ONBOOT=yes
-IPADDR=172.25.0.1
+IPADDR=172.31.0.1
 NETMASK=255.255.255.0
+
 
 # systemctl restart network
 # firewall-cmd --get-active-zone
