--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -10,6 +10,9 @@ C:\Windows\system32> ssh-keygen -t rsa
 C:\Windows\system32> cd %UserProfile%\.ssh
 C:\Users\Home\.ssh> scp id_rsa.pub root@192.168.0.120:/root/.ssh/authorized_keys
 C:\Users\Home\.ssh> scp -i id_rsa two-rabbit.jpg root@192.168.56.120:/var/www/html/images -> 외부로 파일 전송
+C:\Users\Home\.ssh> scp -r folder root@192.168.56.120:/root/
+C:\Users\Home\.ssh> scp -i id_rsa root@192.168.56.120:/root/.ssh/authorized_keys ./
+-> 외부에서 파일 내려 받기 ./ 
 # vi /etc/ssh/sshd_config
 PasswordAuthentication no
 # systemctl restart sshd
@@ -250,7 +253,7 @@ internal
 external
   interfaces: enp0s3
 
-# sysctl -w net.ipv4.ip_forward=1
+# sysctl -w net.ipv4.ip_forward=1 # 리눅스 시스템 라우터로 만드는 세팅
 # cat /proc/sys/net/ipv4/ip_forward
 # firewall-cmd --zone=external --permanent --add-service=dns
 # firewall-cmd --reload
@@ -262,10 +265,11 @@ external
 # yum install dhcp -y
 # vi /etc/dhcp/dhcpd.conf
 ddns-update-style interim;
-subnet 172.25.0.0 netmask 255.255.255.0 {
-option routers 172.25.0.1;
+subnet 172.31.0.0 netmask 255.255.255.0 {
+  ==> 172.31.0.0/24
+option routers 172.31.0.1;
 option subnet-mask 255.255.255.0;
-range dynamic-bootp 172.25.0.128 172.25.0.254;
+range dynamic-bootp 172.31.0.100 172.31.0.110;
 option domain-name-servers 8.8.8.8, 8.8.4.4;
 default-lease-time 7200;
 max-lease-time 86400;
@@ -273,7 +277,11 @@ max-lease-time 86400;
 
 # systemctl enable dhcpd
 # systemctl start dhcpd
+# systemctl enable --now dhcpd
 ```
+WEB01_SAMBA 172.31.0.100
+WEB02_NFS 172.31.0.101
+DATABASE_DNS 172.31.0.102
 
 ## 3. DNS
 도메인 네임 시스템(Domain Name System, DNS)은 호스트의 도메인 이름을 호스트의 네트워크 주소로 바꾸거나 그 반대의 변환을 수행할 수 있도록 하기 위해 개발되었습니다. 특정 컴퓨터(또는 네트워크로 연결된 임의의 장치)의 주소를 찾기 위해, 사람이 이해하기 쉬운 도메인 이름을 숫자로 된 식별 번호(IP 주소)로 변환해 줍니다. 도메인 네임 시스템은 흔히 "전화번호부"에 비유됩니다. 인터넷 도메인 주소 체계로서 TCP/IP의 응용에서, www.example.com과 같은 주 컴퓨터의 도메인 이름을 192.168.1.0과 같은 IP 주소로 변환하고 라우팅 정보를 제공하는 분산형 데이터베이스 시스템입니다.
