--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -11,6 +11,7 @@ C:\Windows\system32> cd %UserProfile%\.ssh
 C:\Users\Home\.ssh> scp id_rsa.pub root@192.168.0.120:/root/.ssh/authorized_keys
 C:\Users\Home\.ssh> scp -i id_rsa two-rabbit.jpg root@192.168.56.120:/var/www/html/images -> 외부로 파일 전송
 C:\Users\Home\.ssh> scp -r folder root@192.168.56.120:/root/
+-> 외부로 폴더 전송
 C:\Users\Home\.ssh> scp -i id_rsa root@192.168.56.120:/root/.ssh/authorized_keys ./
 -> 외부에서 파일 내려 받기 ./ 
 # vi /etc/ssh/sshd_config
@@ -282,6 +283,16 @@ max-lease-time 86400;
 WEB01_SAMBA 172.31.0.100
 WEB02_NFS 172.31.0.101
 DATABASE_DNS 172.31.0.102
+
+Mobaxterm 설치 후 접속 설정
+```
+# cp authorized_keys authorized_keys.pub
+# ssh-copy-id -i authorized_keys.pub root@172.31.0.100
+# my-key.pem 파일 nat 컴퓨터에 옮기기
+# chmod 400 my-key.pem  
+ -> my-key.pem 권한 너무 높아서 읽기권한 뺴버리기
+ # ssh -i my-key.pem root@172.31.0.101
+```
 
 ## 3. DNS
 도메인 네임 시스템(Domain Name System, DNS)은 호스트의 도메인 이름을 호스트의 네트워크 주소로 바꾸거나 그 반대의 변환을 수행할 수 있도록 하기 위해 개발되었습니다. 특정 컴퓨터(또는 네트워크로 연결된 임의의 장치)의 주소를 찾기 위해, 사람이 이해하기 쉬운 도메인 이름을 숫자로 된 식별 번호(IP 주소)로 변환해 줍니다. 도메인 네임 시스템은 흔히 "전화번호부"에 비유됩니다. 인터넷 도메인 주소 체계로서 TCP/IP의 응용에서, www.example.com과 같은 주 컴퓨터의 도메인 이름을 192.168.1.0과 같은 IP 주소로 변환하고 라우팅 정보를 제공하는 분산형 데이터베이스 시스템입니다.
