--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -18,6 +18,8 @@ C:\Users\Home\.ssh> scp -i id_rsa root@192.168.56.120:/root/.ssh/authorized_keys
 PasswordAuthentication no
 # systemctl restart sshd
 ```
+well-known 알려진 포트 : 0 ~ 1023 (서버포트) - 21(FTP), 22(SSH), 23(TELNET), 25(SMTP), 53(DNS), 67(DHCP), 80(HTTP), 443(HTTPS)
+unknown 알려지지 않은 포트 : 1024 ~ 65535 (클라이언트 포트) - 3306(MYSQL), 3389(RDP)
 
 ## 2. HTTPD(Hyper Text Transfer Protocol Daemon; 웹서버 구축 및 간단 홈페이지 꾸미기)
 (AWS Linux : apache, nginx, Win : IIS:Internet Information Services )
@@ -293,7 +295,15 @@ Mobaxterm 설치 후 접속 설정
  -> my-key.pem 권한 너무 높아서 읽기권한 뺴버리기
  # ssh -i my-key.pem root@172.31.0.101
 ```
+192.168.35.226:221 -> 172.31.0.100:22 (WEB01)
+192.168.35.226:222 -> 172.31.0.101:22 (WEB02)
+192.168.35.226:223 -> 172.31.0.102:22 (DNS)
 
+- 포트포워딩
+```
+# firewall-cmd --permanent --zone=external --add-forward-port=port=80:proto=tcp:toport=80:toaddr=10.0.0.1
+# firewall-cmd --reload
+```
 ## 3. DNS
 도메인 네임 시스템(Domain Name System, DNS)은 호스트의 도메인 이름을 호스트의 네트워크 주소로 바꾸거나 그 반대의 변환을 수행할 수 있도록 하기 위해 개발되었습니다. 특정 컴퓨터(또는 네트워크로 연결된 임의의 장치)의 주소를 찾기 위해, 사람이 이해하기 쉬운 도메인 이름을 숫자로 된 식별 번호(IP 주소)로 변환해 줍니다. 도메인 네임 시스템은 흔히 "전화번호부"에 비유됩니다. 인터넷 도메인 주소 체계로서 TCP/IP의 응용에서, www.example.com과 같은 주 컴퓨터의 도메인 이름을 192.168.1.0과 같은 IP 주소로 변환하고 라우팅 정보를 제공하는 분산형 데이터베이스 시스템입니다.
 ```
