--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -257,6 +257,7 @@ external
   interfaces: enp0s3
 
 # sysctl -w net.ipv4.ip_forward=1 # 리눅스 시스템 라우터로 만드는 세팅
+# sysctl -p # 설정 저장
 # cat /proc/sys/net/ipv4/ip_forward
 # firewall-cmd --zone=external --permanent --add-service=dns
 # firewall-cmd --reload
@@ -282,9 +283,9 @@ max-lease-time 86400;
 # systemctl start dhcpd
 # systemctl enable --now dhcpd
 ```
-WEB01_SAMBA 172.31.0.100
-WEB02_NFS 172.31.0.101
-DATABASE_DNS 172.31.0.102
+WEB01_SAMBA 172.31.0.102
+WEB02_NFS 172.31.0.100
+DATABASE_DNS 172.31.0.101
 
 Mobaxterm 설치 후 접속 설정
 ```
@@ -295,22 +296,24 @@ Mobaxterm 설치 후 접속 설정
  -> my-key.pem 권한 너무 높아서 읽기권한 뺴버리기
  # ssh -i my-key.pem root@172.31.0.101
 ```
-192.168.35.226:221 -> 172.31.0.100:22 (WEB01)
-192.168.35.226:222 -> 172.31.0.101:22 (WEB02)
-192.168.35.226:223 -> 172.31.0.102:22 (DNS)
+192.168.35.15:221 -> 172.31.0.102:22 (WEB01)
+192.168.35.15:222 -> 172.31.0.100:22 (WEB02)
+192.168.35.15:223 -> 172.31.0.101:22 (DNS)
 
-- 포트포워딩
+- 포트포워딩 (Redirection)
 ```
-# firewall-cmd --permanent --zone=external --add-forward-port=port=80:proto=tcp:toport=80:toaddr=10.0.0.1
+# firewall-cmd --permanent --zone=external --add-forward-port=port=221:proto=tcp:toport=22:toaddr=172.31.0.100
+# firewall-cmd --permanent --zone=external --add-forward-port=port=222:proto=tcp:toport=22:toaddr=172.31.0.101
+# firewall-cmd --permanent --zone=external --add-forward-port=port=223:proto=tcp:toport=22:toaddr=172.31.0.102
 # firewall-cmd --reload
 ```
 ## 3. DNS
-도메인 네임 시스템(Domain Name System, DNS)은 호스트의 도메인 이름을 호스트의 네트워크 주소로 바꾸거나 그 반대의 변환을 수행할 수 있도록 하기 위해 개발되었습니다. 특정 컴퓨터(또는 네트워크로 연결된 임의의 장치)의 주소를 찾기 위해, 사람이 이해하기 쉬운 도메인 이름을 숫자로 된 식별 번호(IP 주소)로 변환해 줍니다. 도메인 네임 시스템은 흔히 "전화번호부"에 비유됩니다. 인터넷 도메인 주소 체계로서 TCP/IP의 응용에서, www.example.com과 같은 주 컴퓨터의 도메인 이름을 192.168.1.0과 같은 IP 주소로 변환하고 라우팅 정보를 제공하는 분산형 데이터베이스 시스템입니다.
+도메인 네임 시스템(Domain Name System, DNS)은 호스트의 도메인 이름을 호스트의 네트워크 주소로 바꾸거나 그 반대의 변환을 수행할 수 있도록 하기 위해 개발되었습니다. 특정 컴퓨터(또는 네트워크로 연결된 임의의 장치)의 주소를 찾기 위해, 사람이 이해하기 쉬운 도메인 이름을 숫자로 된 식별 번호(IP 주소)로 변환해 줍니다. 도메인 네임 시스템은 흔히 "전화번호부"에 비유됩니다. 인터넷 도메인 주소 체계로서 TCP/IP의 응용에서, www.example.com 과 같은 주 컴퓨터의 도메인 이름을 192.168.1.0과 같은 IP 주소로 변환하고 라우팅 정보를 제공하는 분산형 데이터베이스 시스템입니다.
 ```
 # yum -y install bind bind-chroot bind-utils
 # vi /etc/named.conf
 options {
-        listen-on port 53 { 127.0.0.1; 192.168.0/24; 172.25.0/24; };
+        listen-on port 53 { 127.0.0.1; 192.168.35/24; 172.31.0/24; };
         listen-on-v6 port 53 { ::1; };
         directory       "/var/named";
         dump-file       "/var/named/data/cache_dump.db";
@@ -318,7 +321,7 @@ options {
         memstatistics-file "/var/named/data/named_mem_stats.txt";
         recursing-file  "/var/named/data/named.recursing";
         secroots-file   "/var/named/data/named.secroots";
-        allow-query     { localhost; 192.168.0/24; 172.25.0/24; };
+        allow-query     { localhost; 192.168.35/24; 172.31.0/24; };
         forwarders { 8.8.8.8; 8.8.4.4; };
 
         recursion yes;
@@ -358,16 +361,16 @@ zone "johnlee.shop" IN {
         allow-update { none; };
 };
 
-zone "0.25.172.in-addr.arpa" IN {
+zone "0.31.172.in-addr.arpa" IN {
         type master;
-        file "0.25.172.in-addr.arpa.db";
+        file "0.31.172.in-addr.arpa.db";
         allow-update { none; };
 };
 
 # vi /var/named/johnlee.shop.db
 $TTL    86400
 @       IN      SOA     johnlee.shop.   root.johnlee.shop.(
-                        2022040401 ; Serial
+                        2022041401 ; Serial
                         3h         ; Refresh
                         1h         ; Retry
                         1w         ; Expire
@@ -375,14 +378,16 @@ $TTL    86400
 
         IN      NS      ns.johnlee.shop.
         IN      MX 10   ns.johnlee.shop.
-ns      IN      A       172.25.0.130
-web01   IN      A       172.25.0.128
-web02   IN      A       172.25.0.129
+ns      IN      A       172.31.0.102
+web01   IN      A       172.31.0.100
+web02   IN      A       172.31.0.101
+web03   IN      A       172.31.0.200
+www     IN      A       172.31.0.254
 
-# vi /var/named/0.25.172.in-addr.arpa.db
+# vi /var/named/0.31.172.in-addr.arpa.db
 $TTL	86400
 @	IN	SOA	johnlee.shop.	root.johnlee.shop.(
-			2022040401 ; Serial
+			2022041401 ; Serial
 			3h         ; Refresh
 			1h         ; Retry
 			1w         ; Expire
