--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -270,11 +270,11 @@ external
 # vi /etc/dhcp/dhcpd.conf
 ddns-update-style interim;
 subnet 172.31.0.0 netmask 255.255.255.0 {
-  ==> 172.31.0.0/24
+# ==> 172.31.0.0/24
 option routers 172.31.0.1;
 option subnet-mask 255.255.255.0;
 range dynamic-bootp 172.31.0.100 172.31.0.110;
-option domain-name-servers 8.8.8.8, 8.8.4.4;
+option domain-name-servers 172.31.0.101, 8.8.8.8, 8.8.4.4;
 default-lease-time 7200;
 max-lease-time 86400;
 }
@@ -309,6 +309,7 @@ Mobaxterm 설치 후 접속 설정
 ```
 ## 3. DNS
 도메인 네임 시스템(Domain Name System, DNS)은 호스트의 도메인 이름을 호스트의 네트워크 주소로 바꾸거나 그 반대의 변환을 수행할 수 있도록 하기 위해 개발되었습니다. 특정 컴퓨터(또는 네트워크로 연결된 임의의 장치)의 주소를 찾기 위해, 사람이 이해하기 쉬운 도메인 이름을 숫자로 된 식별 번호(IP 주소)로 변환해 줍니다. 도메인 네임 시스템은 흔히 "전화번호부"에 비유됩니다. 인터넷 도메인 주소 체계로서 TCP/IP의 응용에서, www.example.com 과 같은 주 컴퓨터의 도메인 이름을 192.168.1.0과 같은 IP 주소로 변환하고 라우팅 정보를 제공하는 분산형 데이터베이스 시스템입니다.
+- DNS Server Setting
 ```
 # yum -y install bind bind-chroot bind-utils
 # vi /etc/named.conf
@@ -369,8 +370,9 @@ zone "0.31.172.in-addr.arpa" IN {
         allow-update { none; };
 };
 ```
+- 도메인 주는 법
 ```
-# vi /var/named/johnlee.shop.db
+# vi /var/named/johnlee.shop.db 
 $TTL    86400
 @       IN      SOA     johnlee.shop.   root.johnlee.shop.(
                         2022041401 ; Serial
@@ -384,8 +386,7 @@ $TTL    86400
 ns      IN      A       172.31.0.101
 web01   IN      A       172.31.0.102
 web02   IN      A       172.31.0.100
-web03   IN      A       172.31.0.200
-www     IN      A       172.31.0.254
+nat     IN      A       172.31.0.1
 ```
 ```
 # vi /var/named/0.31.172.in-addr.arpa.db
@@ -401,10 +402,13 @@ $TTL	86400
 130	IN	PTR	ns.johnlee.shop.
 
 # systemctl start named && systemctl enable named
-# vi /etc/sysconfig/network-scripts/ifcfg-enp0s3
-DNS1=172.25.0.130
-DNS2=8.8.8.8
-PEERDNS=no
+# systemctl enable --now named
+# vi /etc/dhcp/dhcpd.conf (NAT)
+ nameserver 172.31.0.101(NS) 추가
+# systemctl restart NetworkManger
+# cat /etc/resolv.conf
+# firewall-cmd --permanent --add-service=dns
+# firewall-cmd --reload
 
 # systemctl restart NetworkManager
 ```
@@ -424,7 +428,7 @@ MX   : 메일 서버 호스트 이름 혹은 IP 주소를 저장하는 레코드
 CNAME: 호스트 이름의 별칭을 저장하는 레코드
        예: www.johnlee.shop은 ns.johnlee.shop의 별칭       
 
-## 4. HAproxy
+## 4. HAproxy - AWS ELB - 로드밸런서 - 부하분산
 HAProxy는 여러 서버에 요청을 분산시키는 TCP 및 HTTP 기반 애플리케이션을 위한 고가용성 로드 밸런서 및 역방향 프록시를 제공하는 무료 오픈 소스 소프트웨어 입니다. C로 작성되었으며 빠르고 효율적(프로세서 및 메모리 사용 측면에서)으로 유명합니다.
 ```
 # yum install -y haproxy
@@ -441,10 +445,11 @@ frontend  http-in
 
 backend backend_servers
     balance            roundrobin
-    cookie  SVID insert indirect nocache maxlife 3m
-    server             web01 172.25.0.128:80 cookie check
-    server             web02 172.25.0.129:80 cookie check
+#    cookie  SVID insert indirect nocache maxlife 3m
+    server             web01 172.31.0.102:80 cookie check
+    server             web02 172.31.0.100:80 cookie check
 
-# systemctl restart haproxy
+# systemctl start haproxy
 # systemctl enable haproxy
+# systemctl enable --now haproxy
 ```
