--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -414,19 +414,19 @@ $TTL	86400
 ```
 
 * 대표적인 레코드
-SOA  : 다루는 도메인 버전과 업데이트 시간 간격 등의 정보를 저장하는 레코드
-A    : 호스트 이름으로 IPv4 주소를 조회할 때 사용하는 레코드
+- SOA  : 다루는 도메인 버전과 업데이트 시간 간격 등의 정보를 저장하는 레코드
+- A    : 호스트 이름으로 IPv4 주소를 조회할 때 사용하는 레코드
        예: 호스트 ns.johnlee.shop의 IPv4 주소는 172.25.0.130
-AAAA : 호스트 이름으로 IPv6 주소를 조회할 때 사용하는 레코드
+- AAAA : 호스트 이름으로 IPv6 주소를 조회할 때 사용하는 레코드
        예: jprs.jp의 IPv6 주소는 2001:218:3001:7::80
-PTR  : IP 주소로 호스트 이름을 조회할 때 사용하는 레코드
+- PTR  : IP 주소로 호스트 이름을 조회할 때 사용하는 레코드
        예: 172.25.0.130의 호스트 이름은 ns.johnlee.shop
-NS   : DNS 서버의 호스트 이름 혹은 IP 주소를 저장하는 레코드
+- NS   : DNS 서버의 호스트 이름 혹은 IP 주소를 저장하는 레코드
        예: johnlee.shop의 DNS 서버는 ns.johnlee.shop
-MX   : 메일 서버 호스트 이름 혹은 IP 주소를 저장하는 레코드
+- MX   : 메일 서버 호스트 이름 혹은 IP 주소를 저장하는 레코드
        예: johnlee.shop의 메일 서버는 mail.johnlee.shop
-CNAME: 호스트 이름의 별칭을 저장하는 레코드
-       예: www.johnlee.shop은 ns.johnlee.shop의 별칭       
+- CNAME: 호스트 이름의 별칭을 저장하는 레코드
+       예: www.johnlee.shop 은 ns.johnlee.shop의 별칭       
 
 ## 4. HAproxy - AWS ELB - 로드밸런서 - 부하분산
 HAProxy는 여러 서버에 요청을 분산시키는 TCP 및 HTTP 기반 애플리케이션을 위한 고가용성 로드 밸런서 및 역방향 프록시를 제공하는 무료 오픈 소스 소프트웨어 입니다. C로 작성되었으며 빠르고 효율적(프로세서 및 메모리 사용 측면에서)으로 유명합니다.
