--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -4,16 +4,17 @@
 SSH 공개 키 인증은 비동기 암호화 알고리즘을 사용하여 "프라이빗" 키와 "공개" 키라는 두 가지 키 파일을 생성합니다. 프라이빗 키 파일은 암호와 동일하며, 모든 상황에서 보호되어야 합니다. 다른 사람이 사용자의 프라이빗 키를 획득하면 사용자가 액세스할 수 있는 모든 SSH 서버에 사용자의 이름으로 로그인할 수 있습니다.
 
 ```
-C:\Windows\system32> ssh root@192.168.0.69
+C:\Windows\system32> ssh root@192.168.35.81
 # mkdir /root/.ssh
 C:\Windows\system32> ssh-keygen -t rsa
 C:\Windows\system32> cd %UserProfile%\.ssh
-C:\Users\Home\.ssh> scp id_rsa.pub root@192.168.0.120:/root/.ssh/authorized_keys
-C:\Users\Home\.ssh> scp -i id_rsa two-rabbit.jpg root@192.168.56.120:/var/www/html/images -> 외부로 파일 전송
-C:\Users\Home\.ssh> scp -r folder root@192.168.56.120:/root/
+C:\Users\Home\.ssh> scp id_rsa.pub root@192.168.35.81:/root/.ssh/authorized_keys
+C:\Users\Home\.ssh> scp -i id_rsa two-rabbit.jpg root@192.168.35.81:/var/www/html/images -> 외부로 파일 전송
+C:\Users\Home\.ssh> scp -r folder root@192.168.35.81:/root/
 -> 외부로 폴더 전송
-C:\Users\Home\.ssh> scp -i id_rsa root@192.168.56.120:/root/.ssh/authorized_keys ./
+C:\Users\Home\.ssh> scp -i id_rsa root@192.168.35.81:/root/.ssh/authorized_keys ./
 -> 외부에서 파일 내려 받기 ./ 
+C:\Users\Home\.ssh>ren id_rsa my-key.pem
 # vi /etc/ssh/sshd_config
 PasswordAuthentication no
 # systemctl restart sshd
@@ -25,7 +26,7 @@ unknown 알려지지 않은 포트 : 1024 ~ 65535 (클라이언트 포트) - 330
 (AWS Linux : apache, nginx, Win : IIS:Internet Information Services )
 HTTP는 HTML 문서와 같은 리소스들을 가져올 수 있도록 해주는 프로토콜입니다. HTTP는 웹에서 이루어지는 모든 데이터 교환의 기초이며, 클라이언트-서버 프로토콜이기도 합니다. 클라이언트-서버 프로토콜이란 (보통 웹브라우저인) 수신자 측에 의해 요청이 초기화되는 프로토콜을 의미합니다. 하나의 완전한 문서는 텍스트, 레이아웃 설명, 이미지, 비디오, 스크립트 등 불러온(fetched) 하위 문서들로 재구성됩니다.
 ```
-C:\Users\HanGi Lee\.ssh> ssh -i id_rsa root@192.168.0.69
+C:\Users\Home\.ssh> ssh -i id_rsa root@192.168.35.81
 # sestatus
 # vi /etc/sysconfig/selinux
 SELINUX=disabled
@@ -208,13 +209,13 @@ quit
 네트워크 주소 변환(NAT; Network Address Translation)은 컴퓨터 네트워킹에서 쓰이는 용어로서, IP 패킷의 TCP/UDP 포트 숫자와 소스 및 목적지의 IP 주소 등을 재기록하면서 라우터를 통해 네트워크 트래픽을 주고 받는 기술을 말합니다. NAT를 이용하는 이유는 대개 사설 네트워크에 속한 여러 개의 호스트가 하나의 공인 IP 주소를 사용하여 인터넷에 접속하기 위함입니다. 많은 네트워크 관리자들이 NAT를 편리한 기법이라고 보고 널리 사용하고 있습니다.
 
 강의실 네트워크
-Public Subnet
+Public Subnet(=외부, external, frontend)
 192.168.0.0/24
 192.168.0.0 ~ 192.168.0.255 (256개 IP - 2개 = 254개)
 192.168.0.0   네트워크 주소(시작 IP)
 192.168.0.255 브로드캐스팅 주소(마지막 IP)
 
-Private Subnet
+Private Subnet(=내부, internal, backend)
 172.31.0.0/24
 172.31.0.0 ~ 172.31.0.255 (256개 IP - 2개 = 254개)
 172.31.0.0   네트워크 주소(시작 IP)
@@ -228,7 +229,7 @@ BOOTPROTO=none
 NAME=enp0s3
 DEVICE=enp0s3
 ONBOOT=yes
-IPADDR=192.168.35.226
+IPADDR=192.168.35.81
 NETMASK=255.255.255.0
 GATEWAY=192.168.35.1
 DNS1=8.8.8.8
@@ -259,8 +260,7 @@ external
 # sysctl -w net.ipv4.ip_forward=1 # 리눅스 시스템 라우터로 만드는 세팅
 # sysctl -p # 설정 저장
 # cat /proc/sys/net/ipv4/ip_forward
-# firewall-cmd --zone=external --permanent --add-service=dns
-# firewall-cmd --reload
+
 ```
 
 ## 2. DHCP
@@ -274,7 +274,7 @@ subnet 172.31.0.0 netmask 255.255.255.0 {
 option routers 172.31.0.1;
 option subnet-mask 255.255.255.0;
 range dynamic-bootp 172.31.0.100 172.31.0.110;
-option domain-name-servers 172.31.0.101, 8.8.8.8, 8.8.4.4;
+option domain-name-servers 172.31.0.100, 8.8.8.8, 8.8.4.4;
 default-lease-time 7200;
 max-lease-time 86400;
 }
@@ -283,30 +283,24 @@ max-lease-time 86400;
 # systemctl start dhcpd
 # systemctl enable --now dhcpd
 ```
-WEB01_SAMBA 172.31.0.102
-WEB02_NFS 172.31.0.100
-DATABASE_DNS 172.31.0.101
+WEB01_SAMBA 172.31.0.101
+WEB02_NFS 172.31.0.102
+NS_DATABASE 172.31.0.100
 
 Mobaxterm 설치 후 접속 설정
-```
-# cp authorized_keys authorized_keys.pub
-# ssh-copy-id -i authorized_keys.pub root@172.31.0.100
-# my-key.pem 파일 nat 컴퓨터에 옮기기
-# chmod 400 my-key.pem  
- -> my-key.pem 권한 너무 높아서 읽기권한 뺴버리기
- # ssh -i my-key.pem root@172.31.0.101
-```
-192.168.35.15:221 -> 172.31.0.102:22 (WEB01)
-192.168.35.15:222 -> 172.31.0.100:22 (WEB02)
-192.168.35.15:223 -> 172.31.0.101:22 (DNS)
 
-- 포트포워딩 (Redirection)
+- 포트포워딩 (Redirection) NAT
 ```
-# firewall-cmd --permanent --zone=external --add-forward-port=port=221:proto=tcp:toport=22:toaddr=172.31.0.100
-# firewall-cmd --permanent --zone=external --add-forward-port=port=222:proto=tcp:toport=22:toaddr=172.31.0.101
-# firewall-cmd --permanent --zone=external --add-forward-port=port=223:proto=tcp:toport=22:toaddr=172.31.0.102
+# firewall-cmd --permanent --zone=external --add-forward-port=port=221:proto=tcp:toport=22:toaddr=172.31.0.101
+# firewall-cmd --permanent --zone=external --add-forward-port=port=222:proto=tcp:toport=22:toaddr=172.31.0.102
+# firewall-cmd --permanent --zone=external --add-forward-port=port=223:proto=tcp:toport=22:toaddr=172.31.0.100
 # firewall-cmd --reload
 ```
+
+192.168.35.81:221 -> 172.31.0.101:22 (WEB01)
+192.168.35.81:222 -> 172.31.0.102:22 (WEB02)
+192.168.35.81:223 -> 172.31.0.100:22 (DNS)
+
 ## 3. DNS
 도메인 네임 시스템(Domain Name System, DNS)은 호스트의 도메인 이름을 호스트의 네트워크 주소로 바꾸거나 그 반대의 변환을 수행할 수 있도록 하기 위해 개발되었습니다. 특정 컴퓨터(또는 네트워크로 연결된 임의의 장치)의 주소를 찾기 위해, 사람이 이해하기 쉬운 도메인 이름을 숫자로 된 식별 번호(IP 주소)로 변환해 줍니다. 도메인 네임 시스템은 흔히 "전화번호부"에 비유됩니다. 인터넷 도메인 주소 체계로서 TCP/IP의 응용에서, www.example.com 과 같은 주 컴퓨터의 도메인 이름을 192.168.1.0과 같은 IP 주소로 변환하고 라우팅 정보를 제공하는 분산형 데이터베이스 시스템입니다.
 - DNS Server Setting
@@ -426,8 +420,13 @@ $TTL	86400
 - MX   : 메일 서버 호스트 이름 혹은 IP 주소를 저장하는 레코드
        예: johnlee.shop의 메일 서버는 mail.johnlee.shop
 - CNAME: 호스트 이름의 별칭을 저장하는 레코드
-       예: www.johnlee.shop 은 ns.johnlee.shop의 별칭       
+       예: www.johnlee.shop 은 ns.johnlee.shop의 별칭   
 
+```
+# yum install -y bind-utils
+# dig A web01.johnlee.shop
+# dig -x 172.31.0.101    
+```
 ## 4. HAproxy - AWS ELB - 로드밸런서 - 부하분산
 HAProxy는 여러 서버에 요청을 분산시키는 TCP 및 HTTP 기반 애플리케이션을 위한 고가용성 로드 밸런서 및 역방향 프록시를 제공하는 무료 오픈 소스 소프트웨어 입니다. C로 작성되었으며 빠르고 효율적(프로세서 및 메모리 사용 측면에서)으로 유명합니다.
 ```
