DNS Setting add

--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -296,6 +296,11 @@ Mobaxterm 설치 후 접속 설정
 # firewall-cmd --permanent --zone=external --add-forward-port=port=223:proto=tcp:toport=22:toaddr=172.31.0.100
 # firewall-cmd --reload
 ```
+- ssh 키 전송
+```
+# cp authorized_keys authorized_keys.pub
+# ssh-copy-id -i authorized_keys.pub root@172.31.0.101
+```
 
 192.168.35.81:221 -> 172.31.0.101:22 (WEB01)
 192.168.35.81:222 -> 172.31.0.102:22 (WEB02)
@@ -390,7 +395,7 @@ $TTL	86400
 			3h         ; Refresh
 			1h         ; Retry
 			1w         ; Expire
-                        1h )       ; Minimum
+      1h )       ; Minimum
 
 	IN	NS	ns.johnlee.shop.
 130	IN	PTR	ns.johnlee.shop.
@@ -404,7 +409,19 @@ $TTL	86400
 # firewall-cmd --permanent --add-service=dns
 # firewall-cmd --reload
 
+---- NAT
+# vi /etc/dhcp/dhcpd.conf
+opiton domain-name-servers 172.31.0.100, 8.8.8.8, 8.8.4.4;
+# systmectl restart dhcpd
+# vi /etc/sysconfig/network-scripts/ifcfg-enp0s3
+  DNS1=172.31.0.100
+# systemctl restart network
+# reboot
+---- WEB01, WEB02, NS
+# setenforce 0
+# vi /etc/sysconfig/selinux
 # systemctl restart NetworkManager
+# cat /etc/resolv.conf
 ```
 
 * 대표적인 레코드
