--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -109,7 +109,7 @@ UUID=aebf131c-6957-451e-8d34-ec978d9581ae  /data  xfs  defaults,nofail  0  2
 # mkdir -p /var/samba/share
 # chmod 777 /var/samba/share
 # adduser kosa
-# passwd kosa0401
+# passwd kosa
 # smbpasswd -a kosa
 # vi /etc/samba/smb.conf
         workgroup = hali #제어판 - 네트워크 활성 네트워크 이름 적기 (SK_WifiGIGAC62F_5G)
@@ -135,6 +135,12 @@ UUID=aebf131c-6957-451e-8d34-ec978d9581ae  /data  xfs  defaults,nofail  0  2
 윈도우 검색 -> \\192.168.56.120
 # yum install -y samba-client
 # smbclient //192.168.56.120/share -U kosa
+```
+- NAT에서 SAMBA를 위한 포워딩 설정
+```
+# firewall-cmd --permanent --zone=external --add-forward-port=port=139:proto=tcp:toport=139:toaddr=172.31.0.101
+# firewall-cmd --permanent --zone=external --add-forward-port=port=445:proto=tcp:toport=445:toaddr=172.31.0.101
+# firewall-cmd --reload
 ```
 
 ## 5. NFS(Network File System; file storage -> 네트워크 파일 공유 -> 리눅스용 파일 공유 시스템) - AWS EFS
@@ -445,7 +451,7 @@ opiton domain-name-servers 172.31.0.100, 8.8.8.8, 8.8.4.4;
 # dig -x 172.31.0.101    
 ```
 ## 4. HAproxy - AWS ELB - 로드밸런서 - 부하분산
-HAProxy는 여러 서버에 요청을 분산시키는 TCP 및 HTTP 기반 애플리케이션을 위한 고가용성 로드 밸런서 및 역방향 프록시를 제공하는 무료 오픈 소스 소프트웨어 입니다. C로 작성되었으며 빠르고 효율적(프로세서 및 메모리 사용 측면에서)으로 유명합니다.
+HAProxy(High Availablity Proxy)는 여러 서버에 요청을 분산시키는 TCP 및 HTTP 기반 애플리케이션을 위한 고가용성 로드 밸런서 및 역방향 프록시를 제공하는 무료 오픈 소스 소프트웨어 입니다. C로 작성되었으며 빠르고 효율적(프로세서 및 메모리 사용 측면에서)으로 유명합니다.
 ```
 # yum install -y haproxy
 # vi /etc/haproxy/haproxy.cfg
@@ -462,10 +468,12 @@ frontend  http-in
 backend backend_servers
     balance            roundrobin
 #    cookie  SVID insert indirect nocache maxlife 3m
-    server             web01 172.31.0.102:80 cookie check
-    server             web02 172.31.0.100:80 cookie check
+    server             web01 172.31.0.101:80 cookie check
+    server             web02 172.31.0.102:80 cookie check
 
 # systemctl start haproxy
 # systemctl enable haproxy
 # systemctl enable --now haproxy
+# firewall-cmd --permanent --zone=external --add-service=http
+# firewall-cmd --reload
 ```
