--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -148,12 +148,15 @@ UUID=aebf131c-6957-451e-8d34-ec978d9581ae  /data  xfs  defaults,nofail  0  2
 네트워크 파일 시스템(Network File System, NFS)은 1984년에 썬 마이크로시스템즈가 개발한 프로토콜입니다. 클라이언트 컴퓨터의 사용자가 네트워크 상의 파일을 직접 연결된 스토리지에 접근하는 방식과 비슷한 방식으로 접근하도록 도와 줍니다. 다른 수많은 프로토콜과 마찬가지로 ONC RPC 시스템을 기반으로 합니다. 네트워크 파일 시스템은 RFC에 정의된 오픈 표준이므로 누구나 구현할 수 있습니다.
 
 - 서버
-```
+```shell
 # yum install -y nfs-utils
 # mkdir /share && cd $_
 # echo "Hello" > test.txt
 # vi /etc/exports
-/share 192.168.56.0/24(rw,sync)
+/share 172.31.0.0/24(rw,sync)
+-> 접근 할 수 있는 ip 범위
+/share *(rw,sync)
+-> anywhere(어디서든지)
 
 # chmod 707 /share
 # systemctl start nfs-server
@@ -167,7 +170,7 @@ UUID=aebf131c-6957-451e-8d34-ec978d9581ae  /data  xfs  defaults,nofail  0  2
 ```
 
 - 클라이언트
-```
+```shell
 # rpm -qa | grep nfs-utils
 # yum install -y nfs-utils
 # showmount -e 192.168.0.120
@@ -182,7 +185,7 @@ UUID=aebf131c-6957-451e-8d34-ec978d9581ae  /data  xfs  defaults,nofail  0  2
 MariaDB는 오픈 소스의 관계형 데이터베이스 관리 시스템(RDBMS)입니다. MySQL과 동일한 소스 코드를 기반으로 하며, GPL v2 라이선스를 따릅니다. 오라클 소유의 현재 불확실한 MySQL의 라이선스 상태에 반발하여 만들어졌습니다.
 
 - 서버
-```
+```shell
 # vi /etc/yum.repos.d/MariaDB.repo
 [mariadb]
 name = MariaDB
