database.md add

--- a/MegaZone/서버와 네트워크.md
+++ b/MegaZone/서버와 네트워크.md
@@ -171,14 +171,15 @@ UUID=aebf131c-6957-451e-8d34-ec978d9581ae  /data  xfs  defaults,nofail  0  2
 
 - 클라이언트
 ```shell
+-- NAT,WEB01,NS
 # rpm -qa | grep nfs-utils
 # yum install -y nfs-utils
-# showmount -e 192.168.0.120
+# showmount -e 172.31.0.102
 # mkdir share
-# mount -t nfs 192.168.0.120:/share /root/share
+# mount -t nfs 172.31.0.102:/share /root/share
 # df -h
 # vi /etc/fstab
-192.168.0.69:/share /root/share nfs defaults 0 0
+172.31.0.102:/share /root/share nfs defaults 0 0
 ```
 
 ## 6. DB서버(Database Management System; MariaDB)
@@ -200,17 +201,22 @@ gpgcheck=1
 # systemctl enable mariadb
 # systemctl enable --now mariadb
 # mysql_secure_installation
+대부분 y로 설정
 # systemctl restart mariadb
 # mysql -u root -p
 CREATE USER 'wpuser'@'%' IDENTIFIED BY 'wppass';
+'%' -> anywhere
 CREATE DATABASE IF NOT EXISTS wordpress;
 GRANT ALL PRIVILEGES ON wordpress.* TO 'wpuser'@'%';
 quit
+# firewall-cmd --permanent --add-service=mysql
+# firewall-cmd --reload
 ```
 - 클라이언트
-```
+```shell
 # yum install mysql -y
-# mysql -h 192.168.56.120 -u wpuser -p 
+# mysql -h ns.johnlee.shop -u wpuser -p
+# mysql -h 172.31.0.100 -u wpuser -p 
 ```
 
 
