--- a/MegaZone/워드프레스.md
+++ b/MegaZone/워드프레스.md
@@ -8,7 +8,10 @@
 # mv wordpress/* .
 # chown -R apache:apache *
 # systemctl enable --now httpd
+# chown -R apache:apache /var/www/*
 ```
 
 멱등성 : 이미 설치가 된 것을 스킵하여서 중복 작업을 피한다. (Ansible)
 재귀적 : -R (Recursive)
+
+sticky session : 고정세션
