--- a/MegaZone/심화/가상화.md
+++ b/MegaZone/심화/가상화.md
@@ -1,4 +1,32 @@
 ### 가상화
 
-#### 전가상화
-1. 게스트 OS명령이 Bianry Translation 과정을 거쳐 하이퍼바이저의 중재를 통해서 하드웨어로 전달, Binary Transaltaion 과정에서 지연 발생
+#### 전가상화(Full-Virtualization)
+- 게스트 OS명령이 Bianry Translation 과정을 거쳐 하이퍼바이저의 중재를 통해서 하드웨어로 전달, Binary Transaltaion 과정에서 지연 발생
+- 하이퍼 바이저가 번역기 역할
+- 하이퍼 바이저의 역할이 매우 많음 -> 지연 발생
+
+#### 반가상화(Para-virtualization)
+- 전가상화와 달리 Binary Translation 과정 없이 하이퍼콜이라는 인터페이스를 통해 게스트 OS명령이 하이퍼바이저를 거쳐서 하드웨로 전달
+- Citrix Xen Server
+- 실무에서 거의 안씀
+- 하이퍼바이저에 Binary transaltion이 없어서 지연이 없고 속도가 매우 빠름, vm의 성능이 좋으나 커널 수정이 어려움
+- 사용자가 커널 수정이 필요함, OS별로 번역기 필요
+
+#### 하드웨어 지원 가상화(Hardware-assisted Virtualization - HVM)
+- 전가상화에서 성능 하락을 일으켰던 Binary Translation을 하이퍼바이저가 아닌 cpu에서 대신 처리, 성능 향상
+- 반가상화의 성능을 따라옴
+- 전가상화를 향상시킨것
+
+### 하이퍼 바이저
+
+#### 타입 1 (Native , Bare-metal-> OS가 설치되지 않는 빈 컴퓨터)
+- 운영체제가 프로그램을 제어하듯이 하이퍼바이저가 해당 하드웨어에서 직접 실행되며 게스트 운영 체제는 하드웨어 위에서 2번쨰 수준으로 실행
+- 종류 : Citrix Hypervisor(XenServer), VMware vSphere Hypervisor(ESXi Server) , Microsoft Hyper-V, Linux KVM(Kernel Based Virtual Machine)
+- AWS -> 인스턴스 만들 때 사용하는 하이퍼 바이저 Xen Server , KVM
+- 실무
+
+#### 타입 2 (hosted)
+- 하이퍼바이저는 일반 프로그램과 같이 호스트 운영체제에서 실행되면 VM 내부에서 동작되는 게스트 운영체제는 하드웨어에서 3번쨰 수준으로 실행
+- Host OS 가 지연요소 , Host OS - Win, Mac 
+- 종류 : VMware Workstation Pro, 리눅스 QEMU, Oracel Virtual Box
+- 실습 : 비즈니스적으로 서비스 X
