--- a/MegaZone/기초/서버와 네트워크.md
+++ b/MegaZone/기초/서버와 네트워크.md
@@ -224,6 +224,15 @@ quit
 ## 1.Router (IP 공유기; AWS VPC NAT GateWay)
 네트워크 주소 변환(NAT; Network Address Translation)은 컴퓨터 네트워킹에서 쓰이는 용어로서, IP 패킷의 TCP/UDP 포트 숫자와 소스 및 목적지의 IP 주소 등을 재기록하면서 라우터를 통해 네트워크 트래픽을 주고 받는 기술을 말합니다. NAT를 이용하는 이유는 대개 사설 네트워크에 속한 여러 개의 호스트가 하나의 공인 IP 주소를 사용하여 인터넷에 접속하기 위함입니다. 많은 네트워크 관리자들이 NAT를 편리한 기법이라고 보고 널리 사용하고 있습니다.
 
+공인IP = Public IP
+사설IP = Private IP
+A Class 10.0.0.0 ~ 10.255.255.255 -> 사설 IP
+B Class 172.16.0.0 ~ 172.31.255.255 -> 사설 IP
+C Class 192.168.0.0 ~ 192.168.255.255
+
+라우팅 테이블에 라우팅 정보 입력 (Window)
+route add 10.0.26.0 mask 255.255.255.0 192.168.0.202
+
 강의실 네트워크
 Public Subnet(=외부, external, frontend)
 192.168.0.0/24
@@ -262,6 +271,7 @@ NETMASK=255.255.255.0
 
 
 # systemctl restart network
+# yum install -y bash-completion #명령어 자동 완성 
 # firewall-cmd --get-active-zone
 public
   interfaces: enp0s3 enp0s8
