--- a/MegaZone/기초/서버와 네트워크.md
+++ b/MegaZone/기초/서버와 네트워크.md
@@ -87,8 +87,25 @@ SELINUX=disabled
 </html>
 ```
 
+HTML 루트 폴더
+- CentOS7 HTTPD(=Apache) /var/www/html/index.html
+- Ubuntu Nginx /var/www/html/index.html 
+- Windows IIS C:\inetpub\wwwroot\index.html
+
+## 2-1 nginx 설치
+```
+# sudo apt-get install -y nginx
+# sudo systemctl status nginx
+# sudo find / -name index.html
+```
+
 ## 3. Storage 추가(Mount; Block Storage 다루기 -> sda(root volume) -> OS) -AWS EBS
 마운트(mount)는 컴퓨터 과학에서 저장 장치에 접근할 수 있는 경로를 디렉터리 구조에 편입시키는 작업입니다. 좁은 의미로는 유닉스 계열의 운영 체제에서의 mount 명령어 또는 그 명령어를 사용하는 것입니다. mount 명령어를 사용하면 저장 장치의 접근 경로를 원하는 위치에 생성할 수 있습니다. 마운트를 이용하면 분산 파일 시스템으로 확장하기가 용이합니다. 사용자는 마운트된 미디어의 파일들에만 접근이 가능합니다.
+
+클라우드 3대 스토리지
+Block Storage(OS 설치, App 설치) - AWS EBS(Elastic Block Store)
+File Storage(네트워크 폴더 공유; 마운트, 파일 공유) - AWS EFS(Elastic File Storage)
+Object Storage(Webshare, url 파일 공유(링크): http 서버) - AWS S3(Simple Storage Service)
 
 ```
 # lsblk
@@ -169,7 +186,7 @@ UUID=aebf131c-6957-451e-8d34-ec978d9581ae  /data  xfs  defaults,nofail  0  2
 # firewall-cmd --reload
 ```
 
-- 클라이언트
+- 클라이언트(CentOS)
 ```shell
 -- NAT,WEB01,NS
 # rpm -qa | grep nfs-utils
@@ -180,6 +197,22 @@ UUID=aebf131c-6957-451e-8d34-ec978d9581ae  /data  xfs  defaults,nofail  0  2
 # df -h
 # vi /etc/fstab
 172.31.0.102:/share /root/share nfs defaults 0 0
+```
+
+- 클라이언트(Ubuntu)
+```
+# sudo apt-get update
+# sudo apt-get install -y nfs-common -y
+# mount -t nfs db.kosa26.shop:/share /home/jigreg/share
+# df -h
+# sudo vi /etc/fstab
+db.kosa26.shop:/share /home/jigreg/share nfs defaults 0 0
+```
+
+- 클라이언트(Window)
+```
+IIS에서 Client for NFS 설치
+mount db.kosa26.shop:/share Z:\
 ```
 
 ## 6. DB서버(Database Management System; MariaDB)
@@ -470,7 +503,7 @@ opiton domain-name-servers 172.31.0.100, 8.8.8.8, 8.8.4.4;
 # dig A web01.johnlee.shop
 # dig -x 172.31.0.101    
 ```
-## 4. HAproxy - AWS ELB - 로드밸런서 - 부하분산
+## 4. HAproxy - AWS ELB-ALB - 로드밸런서 - 부하분산
 HAProxy(High Availablity Proxy)는 여러 서버에 요청을 분산시키는 TCP 및 HTTP 기반 애플리케이션을 위한 고가용성 로드 밸런서 및 역방향 프록시를 제공하는 무료 오픈 소스 소프트웨어 입니다. C로 작성되었으며 빠르고 효율적(프로세서 및 메모리 사용 측면에서)으로 유명합니다.
 ```
 # yum install -y haproxy
@@ -497,3 +530,6 @@ backend backend_servers
 # firewall-cmd --permanent --zone=external --add-service=http
 # firewall-cmd --reload
 ```
+
+mode -> http L7Switch (Application Layer), tcp L4(Transport Layer)
+쿠키 이름 부여 및 관리 cookie w1 check
