--- a/MegaZone/기초/워드프레스.md
+++ b/MegaZone/기초/워드프레스.md
@@ -11,6 +11,20 @@
 # chown -R apache:apache /var/www/*
 ```
 
+- php 7.4 버전 설치 방법
+```
+# yum -y install http://rpms.remirepo.net/enterprise/remi-release-7.rpm
+# yum -y install epel-release yum-utils
+# yum-config-manager --enable remi-php74
+# yum install -y httpd php php-mysql php-gd php-mbstring wget unzip
+# cd /var/www/html
+# unzip /root/share/wordpress-5.9.3-ko_KR.zip
+# mv wordpress/* .
+# chown -R apache:apache /var/www/*
+# systemctl restart httpd
+
+```
+
 멱등성 : 이미 설치가 된 것을 스킵하여서 중복 작업을 피한다. (Ansible)
 재귀적 : -R (Recursive)
 sticky session : 고정세션
