--- a/MegaZone/기초/서버와 네트워크.md
+++ b/MegaZone/기초/서버와 네트워크.md
@@ -99,6 +99,12 @@ HTML 루트 폴더
 # sudo find / -name index.html
 ```
 
+## 2-2 WEB서버 로그 확인
+```
+# cd /var/log/httpd
+# cat access_log
+```
+
 ## 3. Storage 추가(Mount; Block Storage 다루기 -> sda(root volume) -> OS) -AWS EBS
 마운트(mount)는 컴퓨터 과학에서 저장 장치에 접근할 수 있는 경로를 디렉터리 구조에 편입시키는 작업입니다. 좁은 의미로는 유닉스 계열의 운영 체제에서의 mount 명령어 또는 그 명령어를 사용하는 것입니다. mount 명령어를 사용하면 저장 장치의 접근 경로를 원하는 위치에 생성할 수 있습니다. 마운트를 이용하면 분산 파일 시스템으로 확장하기가 용이합니다. 사용자는 마운트된 미디어의 파일들에만 접근이 가능합니다.
 
@@ -533,3 +539,36 @@ backend backend_servers
 
 mode -> http L7Switch (Application Layer), tcp L4(Transport Layer)
 쿠키 이름 부여 및 관리 cookie w1 check
+
+```
+# vi /etc/haproxy/haproxy.cfg
+global
+    daemon
+
+defaults
+    mode               http
+
+frontend  http-in
+    bind *:80 # L4 S/W(TCP Port)
+    acl firefox hdr_sub(User-Agent) Firefox
+    acl trident hdr_sub(User-Agent) Trident #L7 S/W (Contents Switch)
+    default_backend    backend_servers
+    use_backend bk_firefox if firefox
+    use_backend bk_trident if trident
+
+backend backend_servers
+    balance            roundrobin
+#    cookie  SVID insert indirect nocache maxlife 10s
+    server             web01 10.0.26.2:80 cookie w1 check
+    server             web02 10.0.26.4:80 cookie w2 check
+    server             web03 10.0.26.5:80 cookie w3 check
+
+backend bk_firefox
+    server             web01 10.0.26.2:80
+backend bk_trident
+    server             web02 10.0.26.4:80
+
+```
+acl : access control list, 접근 제어 목록
+hdr : header
+조건이 안맞는 브라우저 -> default_backend
