--- a/MegaZone/심화/서버와 네트워크.md
+++ b/MegaZone/심화/서버와 네트워크.md
@@ -86,8 +86,32 @@ SELINUX=disabled
 </body>
 </html>
 ```
+
+HTML 루트 폴더
+- CentOS7 HTTPD(=Apache) /var/www/html/index.html
+- Ubuntu Nginx /var/www/html/index.html 
+- Windows IIS C:\inetpub\wwwroot\index.html
+
+## 2-1 nginx 설치
+```
+# sudo apt-get install -y nginx
+# sudo systemctl status nginx
+# sudo find / -name index.html
+```
+
+## 2-2 WEB서버 로그 확인
+```
+# cd /var/log/httpd
+# cat access_log
+```
+
 ## 3. Storage 추가(Mount; Block Storage 다루기 -> sda(root volume) -> OS) -AWS EBS
 마운트(mount)는 컴퓨터 과학에서 저장 장치에 접근할 수 있는 경로를 디렉터리 구조에 편입시키는 작업입니다. 좁은 의미로는 유닉스 계열의 운영 체제에서의 mount 명령어 또는 그 명령어를 사용하는 것입니다. mount 명령어를 사용하면 저장 장치의 접근 경로를 원하는 위치에 생성할 수 있습니다. 마운트를 이용하면 분산 파일 시스템으로 확장하기가 용이합니다. 사용자는 마운트된 미디어의 파일들에만 접근이 가능합니다.
+
+클라우드 3대 스토리지
+Block Storage(OS 설치, App 설치) - AWS EBS(Elastic Block Store)
+File Storage(네트워크 폴더 공유; 마운트, 파일 공유) - AWS EFS(Elastic File Storage)
+Object Storage(Webshare, url 파일 공유(링크): http 서버) - AWS S3(Simple Storage Service)
 
 ```
 # lsblk
@@ -512,6 +536,10 @@ backend backend_servers
 # firewall-cmd --permanent --zone=external --add-service=http
 # firewall-cmd --reload
 ```
+
+mode -> http L7Switch (Application Layer), tcp L4(Transport Layer)
+쿠키 이름 부여 및 관리 cookie w1 check
+
 ```
 # vi /etc/haproxy/haproxy.cfg
 global
@@ -541,3 +569,6 @@ backend bk_trident
     server             web02 10.0.26.4:80
 
 ```
+acl : access control list, 접근 제어 목록
+hdr : header
+조건이 안맞는 브라우저 -> default_backend
