--- a/MegaZone/심화/서버와 네트워크.md
+++ b/MegaZone/심화/서버와 네트워크.md
@@ -209,7 +209,7 @@ UUID=aebf131c-6957-451e-8d34-ec978d9581ae  /data  xfs  defaults,nofail  0  2
 ```
 # sudo apt-get update
 # sudo apt-get install -y nfs-common -y
-# mount -t nfs db.kosa26.shop:/share /home/jigreg/share
+# sudo mount -t nfs db.kosa26.shop:/share /home/jigreg/share
 # df -h
 # sudo vi /etc/fstab
 db.kosa26.shop:/share /home/jigreg/share nfs defaults 0 0
@@ -218,6 +218,7 @@ db.kosa26.shop:/share /home/jigreg/share nfs defaults 0 0
 - 클라이언트(Window)
 ```
 IIS에서 Client for NFS 설치
+cmd 관리자 권한에서
 mount db.kosa26.shop:/share Z:\
 ```
 
