DOC AWS Hybrid Cloud add

--- a/MegaZone/심화/워드프레스 최종.md
+++ b/MegaZone/심화/워드프레스 최종.md
@@ -69,3 +69,63 @@ $ sudo mv wordpress/* .
 $ sudo chown -R www-data:www-data *
 $ sudo chmod -R 755 *
 ```
+### MariaDB 설치
+```
+$ sudo apt-get update -y
+$ sudo apt-get install -y mariadb-server unzip nfs-common
+$ sudo mysql_secure_installation
+$ sudo vi /etc/mysql/mariadb.conf.d/50-server.cnf
+#bind-address            = 127.0.0.1
+
+$ sudo systemctl restart mysql
+$ sudo mysql -u root -p
+CREATE USER 'wpuser'@'%' IDENTIFIED BY 'wppass';
+CREATE DATABASE IF NOT EXISTS wordpress;
+GRANT ALL PRIVILEGES ON wordpress.* TO 'wpuser'@'%';
+quit
+```
+### 웹서버 설치
+```
+# wget https://ko.wordpress.org/wordpress-4.8.2-ko_KR.zip
+# sudo yum install -y httpd php php-mysqlnd php-gd php-mbstring wget unzip
+# cd /var/www/html
+# sudo unzip /home/azureuser/wordpress-4.8.2-ko_KR.zip
+# sudo mv ./wordpress/* .
+# sudo chown -R apache:apache /var/www/*
+# sudo systemctl restart httpd
+# sudo systemctl enable httpd
+```
+```
+mysql -h johnlee2022.mariadb.database.azure.com -u azure@johnlee2022 -p --ssl-ca=BaltimoreCyberTrustRoot.crt.pem
+php 7
+define( 'MYSQL_CLIENT_FLAGS', MYSQLI_CLIENT_SSL | MYSQLI_CLIENT_SSL_DONT_VERIFY_SERVER_CERT );
+```
+```
+wget https://dl.cacerts.digicert.com/DigiCertGlobalRootCA.crt.pem
+php 5.6
+sudo cp wp-config-sample.php wp-config.php
+sudo vi wp-config.php
+```
+//** Connect with SSL** //
+define('MYSQL_CLIENT_FLAGS', MYSQLI_CLIENT_SSL);
+//** SSL CERT **//
+define('MYSQL_SSL_CERT','BaltimoreCyberTrustRoot.crt.pem');
+
+define('MYSQL_SSL_CERT','/var/www/html/DigiCertGlobalRootCA.crt.pem');
+curl ipconfig.io
+
+
+BaltimoreCyberTrustRoot.crt.pem
+johnlee2022.mariadb.database.azure.com
+azure@johnlee2022
+
+WordPress
+SSL 공용 인증서를 다운로드하고 // **MySQL settings - You can get this info from your web host** // 줄 뒤의 wp-config.php에 다음 줄을 추가합니다.
+
+PHP
+
+복사
+//** Connect with SSL** //
+define('MYSQL_CLIENT_FLAGS', MYSQLI_CLIENT_SSL);
+//** SSL CERT **//
+define('MYSQL_SSL_CERT','/FULLPATH/on-client/to/DigiCertGlobalRootCA.crt.pem');
