--- a/MegaZone/Project/자료조사.md
+++ b/MegaZone/Project/자료조사.md
@@ -1,3 +1,20 @@
 # 아이디어
 
-- 
+![https://d2908q01vomqb2.cloudfront.net/f1f836cb4ea6efb2a0b1b99f41ad8b103eff4b59/2022/04/26/ML-8280-image001.jpg](EKS)
+
+![https://d2908q01vomqb2.cloudfront.net/f1f836cb4ea6efb2a0b1b99f41ad8b103eff4b59/2022/04/26/ML-8280-image003.jpg](Kubeflow)
+- HTTPS를 통한 안전한 외부 트래픽 관리를 위한 Application Load Balancer
+- 영구 로그 관리를 위한 Amazon CloudWatch
+- TLS(전송 계층 보안)를 통한 사용자 인증을 위한 AWS Cognito
+- 고도로 최적화된 Jupyter 노트북 서버 이미지를 위한 AWS Deep Learning Containers
+- 교육 성능 향상을 위한 간단하고 확장 가능한 서버리스 파일 스토리지 솔루션을 위한 Amazon Elastic File System (Amazon EFS) 또는 Amazon FSx for Lustre
+- 관리형 Kubernetes 클러스터용 Amazon EKS
+- 확장성이 뛰어난 파이프라인 및 메타데이터 저장소를 위한 Amazon Relational 
+- Database Service (Amazon RDS)
+- 애플리케이션에 액세스하는 데 필요한 보안 암호를 보호하는 AWS Secrets Manager
+- 사용하기 쉬운 파이프라인 아티팩트 저장소를 위한 Amazon Simple Storage Service (Amazon S3)
+
+![https://d2908q01vomqb2.cloudfront.net/f1f836cb4ea6efb2a0b1b99f41ad8b103eff4b59/2022/04/26/ML-8280-image005.jpg](Cognito)
+
+-참조
+https://aws.amazon.com/ko/blogs/machine-learning/build-and-deploy-a-scalable-machine-learning-system-on-kubernetes-with-kubeflow-on-aws/
