--- a/MegaZone/Project/자료조사.md
+++ b/MegaZone/Project/자료조사.md
@@ -3,13 +3,14 @@
 ![EKS](https://d2908q01vomqb2.cloudfront.net/f1f836cb4ea6efb2a0b1b99f41ad8b103eff4b59/2022/04/26/ML-8280-image001.jpg)
 
 ![Kubeflow](https://d2908q01vomqb2.cloudfront.net/f1f836cb4ea6efb2a0b1b99f41ad8b103eff4b59/2022/04/26/ML-8280-image003.jpg)
+
 - HTTPS를 통한 안전한 외부 트래픽 관리를 위한 Application Load Balancer
 - 영구 로그 관리를 위한 Amazon CloudWatch
 - TLS(전송 계층 보안)를 통한 사용자 인증을 위한 AWS Cognito
 - 고도로 최적화된 Jupyter 노트북 서버 이미지를 위한 AWS Deep Learning Containers
 - 교육 성능 향상을 위한 간단하고 확장 가능한 서버리스 파일 스토리지 솔루션을 위한 Amazon Elastic File System (Amazon EFS) 또는 Amazon FSx for Lustre
 - 관리형 Kubernetes 클러스터용 Amazon EKS
-- 확장성이 뛰어난 파이프라인 및 메타데이터 저장소를 위한 Amazon Relational 
+- 확장성이 뛰어난 파이프라인 및 메타데이터 저장소를 위한 Amazon Relational
 - Database Service (Amazon RDS)
 - 애플리케이션에 액세스하는 데 필요한 보안 암호를 보호하는 AWS Secrets Manager
 - 사용하기 쉬운 파이프라인 아티팩트 저장소를 위한 Amazon Simple Storage Service (Amazon S3)
@@ -18,3 +19,135 @@
 
 -참조
 https://aws.amazon.com/ko/blogs/machine-learning/build-and-deploy-a-scalable-machine-learning-system-on-kubernetes-with-kubeflow-on-aws/
+
+Terraform userdata
+
+```
+#!/bin/bash
+timedatectl set-timezone Asia/Seoul
+cd /opt
+wget https://releases.hashicorp.com/terraform/1.2.3/terraform_1.2.3_linux_amd64.zip
+unzip terraform_1.2.3_linux_amd64.zip
+mv terraform /usr/local/bin/
+terraform -version
+```
+
+Terraform
+main.tf
+
+```
+terraform {
+ required_providers {
+  aws = {
+   source = "hashicorp/aws"
+  }
+ }
+}
+resource "aws_iam_role" "eks-iam-role" {
+ name = "terraform-eks-iam-role"
+
+ path = "/"
+
+ assume_role_policy = <<EOF
+{
+ "Version": "2012-10-17",
+ "Statement": [
+  {
+   "Effect": "Allow",
+   "Principal": {
+    "Service": "eks.amazonaws.com"
+   },
+   "Action": "sts:AssumeRole"
+  }
+ ]
+}
+EOF
+
+}
+resource "aws_iam_role_policy_attachment" "AmazonEKSClusterPolicy" {
+ policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
+ role    = aws_iam_role.eks-iam-role.name
+}
+resource "aws_iam_role_policy_attachment" "AmazonEC2ContainerRegistryReadOnly-EKS" {
+ policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
+ role    = aws_iam_role.eks-iam-role.name
+}
+resource "aws_eks_cluster" "terraform-eks" {
+ name = "terraform-cluster"
+ role_arn = aws_iam_role.eks-iam-role.arn
+
+ vpc_config {
+  subnet_ids = [var.subnet_id_1, var.subnet_id_2]
+ }
+depends_on = [
+  aws_iam_role.eks-iam-role,
+ ]
+}
+resource "aws_iam_role" "workernodes" {
+  name = "eks-node-group-example"
+
+  assume_role_policy = jsonencode({
+   Statement = [{
+    Action = "sts:AssumeRole"
+    Effect = "Allow"
+    Principal = {
+     Service = "ec2.amazonaws.com"
+    }
+   }]
+   Version = "2012-10-17"
+  })
+ }
+
+ resource "aws_iam_role_policy_attachment" "AmazonEKSWorkerNodePolicy" {
+  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
+  role    = aws_iam_role.workernodes.name
+ }
+
+ resource "aws_iam_role_policy_attachment" "AmazonEKS_CNI_Policy" {
+  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
+  role    = aws_iam_role.workernodes.name
+ }
+
+ resource "aws_iam_role_policy_attachment" "EC2InstanceProfileForImageBuilderECRContainerBuilds" {
+  policy_arn = "arn:aws:iam::aws:policy/EC2InstanceProfileForImageBuilderECRContainerBuilds"
+  role    = aws_iam_role.workernodes.name
+ }
+
+ resource "aws_iam_role_policy_attachment" "AmazonEC2ContainerRegistryReadOnly" {
+  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
+  role    = aws_iam_role.workernodes.name
+ }
+ resource "aws_eks_node_group" "worker-node-group" {
+  cluster_name  = aws_eks_cluster.terraform-eks.name
+  node_group_name = "terraform-workernodes"
+  node_role_arn  = aws_iam_role.workernodes.arn
+  subnet_ids   = [var.subnet_id_1, var.subnet_id_2]
+  instance_types = ["t2.micro"]
+
+  scaling_config {
+   desired_size = 2
+   max_size   = 4
+   min_size   = 2
+  }
+
+  depends_on = [
+   aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy,
+   aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy,
+   #aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly,
+  ]
+ }
+```
+
+variables.tf
+
+```
+variable "subnet_id_1" {
+  type = string
+  default = "subnet-0ae9beb79dcecc9be"
+ }
+
+ variable "subnet_id_2" {
+  type = string
+  default = "subnet-09d9ee01e3f82b2a1"
+ }
+```
